infrastructure/k8s/posts-depl.yaml
#kind : object tab gives template
# indentation matters in a yaml file
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-depl
spec:
  replicas: 1 # number of pods we want to create running some particular image
  selector: # take a look at all pods created that match the label with app:posts and that what deployment it will be in charge of
    matchLabels:
      app: posts
  template: # exact config of a pod that we want the deployment to create want pod with label app:posts
    metadata:
      labels:
        app: posts
    spec:
      containers: # containers is an array so use dash
        - name: posts
          image: karanveersinghdocker/posts:0.0.1
