infrastructure/k8s/event-bus-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus # match this selector with the selector in the deployment
  ports:
    - name: event-bus
      port: 4005
      targetPort: 4005
