infrastructure/k8s/post-clusterip-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts # match this selector with the selector in the deployment
  ports:
    - name: posts
      port: 4000
      targetPort: 4000
