infrastructure/k8s/query-depl.yaml
#kind : object tab gives template
# indentation matters in a yaml file
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1 # number of pods we want to create running some particular image
  selector: # take a look at all pods created that match the label with app:posts and that what deployment it will be in charge of
    matchLabels:
      app: query
  template: # exact config of a pod that we want the deployment to create want pod with label app:posts
    metadata:
      labels:
        app: query
    spec:
      containers: # containers is an array so use dash
        - name: query
          image: karanveersinghdocker/posts # use latest behind the
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query # match this selector with the selector in the deployment
  ports:
    - name: query
      port: 4002
      targetPort: 4002
