infrastructure/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: posts.com
      http:
        paths:
          # paths are ordered from greatest to least importance will try to match /posts/create first then next path etc.
          - path: /posts/create
            backend:
              serviceName: post-clusterip-srv
              servicePort: 4000
          - path:
            backend:
              serviceName: query-srv
              servicePort: 4002
          - path: /posts/?(.*)/comments
            backend:
              serviceName: comments-srv
              servicePort: 4001
          - path: /
            backend:
              serviceName: client-srv
              servicePort: 3000
